TEST_PROGRAMS/INVALID/jonathan_campbell/4.min
var s: string;

s = 'ab"'

print s
